Adding simple download data from github

--- a/suicide-data-analysis.Rmd
+++ b/suicide-data-analysis.Rmd
@@ -85,6 +85,9 @@ What I obviously cannot do in my data based analysis, is to focus on the existen
 The following libraries will be used in the present project:
 
 ```{r installing-and-loading-missing-libs, message=FALSE, warning=FALSE, echo=FALSE}
+##########################################################
+# installing and loading missing libs
+##########################################################
 if(!require(data.table)) install.packages("data.table", repos = "http://cran.us.r-project.org")
 if(!require(tidyverse)) install.packages("tidyverse", repos = "http://cran.us.r-project.org")
 if(!require(RSelenium)) install.packages("RSelenium", repos = "http://cran.us.r-project.org")
@@ -108,6 +111,11 @@ if(!require(hopkins)) install.packages("hopkins", repos = "http://cran.us.r-proj
 if(!require(clValid)) install.packages("clValid", repos = "http://cran.us.r-project.org")
 if(!require(ggpubr)) install.packages("ggpubr", repos = "http://cran.us.r-project.org")
 if(!require(compiler)) install.packages("compiler", repos = "http://cran.us.r-project.org")
+###############################################################
+# for simplicity's sake: loading the necessary data from github
+###############################################################
+download.file("https://github.com/drnjha/suicidal-world/raw/main/suicide-data-analysis.zip", "./suicide-data-analysis.zip")
+unzip("./suicide-data-analysis.zip")
 ```
 
 ```{r loading-libs, message=FALSE}
