Clean up the direczory after knitting

--- a/suicide-data-analysis.Rmd
+++ b/suicide-data-analysis.Rmd
@@ -4064,3 +4064,9 @@ for (i in 1:length(headings)) { names(tables[[i]]) <- c("Var", "Source") }
 out<- tables[[1]]
 kable(out) %>% kable_styling(latex_options = "HOLD_position",bootstrap_options = "condensed", full_width = F, font_size = 7, position = "left") %>% column_spec(1, width = "3.5cm") %>% column_spec(2, width = "12cm")
 ```
+
+```{r, echo=FALSE}
+if (file.exists("./suicide-data-analysis.zip")) {
+  unlink(as.character(unzip("./suicide-data-analysis.zip", list=T)$Name))
+}
+```
